# zynx

./: Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: zygisk-adapter.md
scripts/: setup-ondk.py
src/bridge/: Cargo.toml
src/bridge-api/: Cargo.toml
src/bridge-api/src/: injector.rs  lib.rs  zygote.rs
src/bridge-common/: Cargo.toml
src/bridge-common/src/: lib.rs  zygote.rs
src/bridge-shared/: Cargo.toml
src/bridge-shared/src/: dlfcn.rs  injector.rs  lib.rs  policy.rs  remote_lib.rs  zygote.rs
src/bridge-shared/src/policy/: debugger.rs  liteloader.rs  zygisk.rs
src/bridge-types/: Cargo.toml
src/bridge-types/src/: dlext.rs  dlfcn.rs  injector.rs  lib.rs  zygote.rs
src/bridge/src/: dlfcn.rs  inject.rs  injector.rs  lib.rs  library.rs  trampoline.rs  zygote.rs
src/bridge/src/injector/: debugger.rs  liteloader.rs
src/common/: Cargo.toml
src/common/src/: ext.rs
src/core/: Cargo.toml  build.rs
src/core/proto/: embryo_check_args.proto
src/core/src/: android.rs  binary.rs  cli.rs  config.rs  daemon.rs  injector.rs  main.rs  misc.rs  monitor.rs
src/core/src/android/: inotify.rs  packages.rs  properties.rs  sysprop.rs
src/core/src/binary/: cpp.rs  library.rs  symbol.rs
src/core/src/injector/: app.rs  asm.rs  bridge.rs  misc.rs  policy.rs  process.rs  ptrace.rs  trampoline.rs  zygote.rs
src/core/src/injector/app/: embryo.rs  ipc.rs  policy.rs  zygote.rs
src/core/src/injector/app/policy/: debug.rs  debugger.rs  lite.rs  liteloader.rs  zygisk.rs
src/core/src/injector/ptrace/: ext.rs
src/core/src/injector/ptrace/ext/: base.rs  ipc.rs  jni.rs  remote_call.rs
src/core/src/misc/: ext.rs
src/ebpf/: Cargo.toml  build.rs
src/ebpf-common/: Cargo.toml
src/ebpf-common/src/: lib.rs
src/ebpf-shared/: Cargo.toml
src/ebpf-types/: Cargo.toml
src/ebpf/src/: main.rs
src/misc/: Cargo.toml
src/misc/src/: debug.rs  ext.rs  lib.rs  props.rs  selinux.rs
src/proc-macros/: Cargo.toml
src/proc-macros/src/: lib.rs
src/utils/: Cargo.toml
src/zygisk-compat/: Cargo.toml
src/zygisk-compat/src/: abi.rs  lib.rs  module.rs
src/zygisk-compat/src/abi/: api.rs  flags.rs  module.rs
src/zygisk-compat/src/abi/args/: app.rs  server.rs
