[workspace]
resolver = "3"
members = ["src/*"]
default-members = ["src/core"]

[workspace.package]
edition = "2024"
version = "1.0.0"

[workspace.dependencies]
android_logger = "0.15"
anyhow = "1"
aya = { git = "https://github.com/aya-rs/aya" }
aya-build = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
env_logger = "0.11"
log = "0.4"
rustix = { version = "1.1", features = ["process"] }
tokio = { version = "1", features = ["full"] }
which = "8.0"

[profile.release.package.zynx-ebpf]
codegen-units = 1
