[workspace]
resolver = "3"
members = ["src/*"]
default-members = ["src/core"]

[workspace.package]
edition = "2024"
version = "1.0.0"

[workspace.dependencies]
android_logger = "0.15"
anyhow = "1"
# Fixme: temporary workaround, see: https://github.com/aya-rs/aya/pull/1424
aya = { git = "https://github.com/Mufanc/aya" }
aya-build = { git = "https://github.com/Mufanc/aya" }
aya-ebpf = { git = "https://github.com/Mufanc/aya" }
aya-log = { git = "https://github.com/Mufanc/aya" }
aya-log-ebpf = { git = "https://github.com/Mufanc/aya" }
cpp_demangle = "0.5"
dynasmrt = "4.0"
env_logger = "0.11"
log = "0.4"
lzma-rs = "0.3"
nix = { version = "0.30", features = ["process"] }
object = "0.38"
once_cell = "1.21"
once_map = "0.4"
procfs = "0.18"
regex-lite = "0.1"
rustix = { version = "1.1", features = ["process"] }
tokio = { version = "1", features = ["full"] }
which = "8.0"

[profile.release.package.zynx-ebpf]
codegen-units = 1
