[workspace]
resolver = "3"
members = ["src/*"]
default-members = ["src/bridge", "src/core"]

[workspace.package]
edition = "2024"
version = "1.0.0"

[workspace.dependencies]
android_logger = "0.15"
anyhow = "1"
aya = { git = "https://github.com/aya-rs/aya" }
aya-build = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.5", features = ["derive"] }
cpp_demangle = "0.5"
daemonize = "0.5"
dynasmrt = "4.0"
env_logger = "0.11"
jni-sys = "0.4"
log = "0.4"
lzma-rs = "0.3"
memfd = "0.6"
nix = { version = "0.30" }
object = "0.38"
once_cell = "1.21"
once_map = "0.4"
procfs = "0.18"
regex-lite = "0.1"
scopeguard = "1.2"
syscalls = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
which = "8.0"

[profile.release.package.zynx-ebpf]
codegen-units = 1
