[package]
name = "zynx-bridge-types"
version.workspace = true
edition.workspace = true

[features]
zygisk = []

[dependencies]
anyhow = { workspace = true }
jni-sys = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rkyv = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[lints]
workspace = true
