[package]
name = "zynx-bridge"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["zygisk"]
zygisk = ["zynx-zygisk-compat"]

[dependencies]
android_logger = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["mman", "user"] }
rkyv = { workspace = true }
uds = { workspace = true }
zynx-bridge-common = { path = "../bridge-common" }
zynx-common = { path = "../common" }
zynx-zygisk-compat = { path = "../zygisk-compat", optional = true }
