[package]
name = "zynx-bridge"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
zygisk = ["zynx-bridge-types/zygisk", "zynx-zygisk-compat"]

[dependencies]
android_logger = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["mman", "user"] }
rkyv = { workspace = true }
uds = { workspace = true }
zynx-bridge-types = { path = "../bridge-types" }
zynx-utils = { path = "../utils" }
zynx-zygisk-compat = { path = "../zygisk-compat", optional = true }
