[package]
name = "zynx-bridge"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
zygisk = ["zynx-bridge-shared/zygisk", "zynx-zygisk-compat"]

[dependencies]
android_logger = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["mman", "user"] }
zynx-bridge-shared = { path = "../bridge-shared" }
zynx-misc = { path = "../misc" }
zynx-zygisk-compat = { path = "../zygisk-compat", optional = true }
