[package]
name = "zynx"
version.workspace = true
edition.workspace = true

[features]
default = ["zygisk"]
zygisk = ["zynx-bridge/zygisk", "zynx-bridge-shared/zygisk"]

[dependencies]
android_logger = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true }
cpp_demangle = { workspace = true }
daemonize = { workspace = true }
dynasmrt = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
lzma-rs = { workspace = true }
memfd = { workspace = true }
nix = { workspace = true, features = ["feature", "fs", "process", "ptrace", "resource", "signal", "socket", "uio", "user"] }
notify = { workspace = true }
object = { workspace = true }
once_cell = { workspace = true }
once_map = { workspace = true }
parking_lot = { workspace = true }
procfs = { workspace = true }
prost = { workspace = true }
regex-lite = { workspace = true }
scopeguard = { workspace = true }
strum = { workspace = true }
syscalls = { workspace = true }
tokio = { workspace = true }
wincode = { workspace = true }
zynx-bridge = { path = "../bridge" }
zynx-bridge-shared = { path = "../bridge-shared" }
zynx-misc = { path = "../misc" }
zynx-ebpf-shared = { path = "../ebpf-shared" }

[build-dependencies]
aya-build = { workspace = true }
glob = { workspace = true }
prost-build = { workspace = true }

# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
zynx-ebpf = { path = "../ebpf" }

[lints]
workspace = true
