[package]
name = "zynx-ebpf"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zynx-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
zynx-ebpf-common = { path = "../ebpf-common" }

[build-dependencies]
which = { workspace = true }
