[package]
name = "zynx-ebpf"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "zynx-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
zynx-ebpf-types = { path = "../ebpf-types" }

[build-dependencies]
which = { workspace = true }
