[package]
name = "zynx-zygisk-compat"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
jni-sys = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
zynx-bridge-types = { path = "../bridge-types", features = ["zygisk"] }

[lints]
workspace = true
