[package]
name = "zynx-zygisk-compat"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
zynx-bridge-shared = { path = "../bridge-shared", features = ["zygisk"] }

[lints]
workspace = true
